	* *.t: fixed tests 

2010-02-02  Dominique Dumont  <dominique.dumont@hp.com>

	* demo/demo.pl (my_system): new demo (requires Config::Model::Itself)

2010-01-24  Dominique Dumont  <domi.dumont@free.fr>

	* lib/Config/Model/models/Ssh/PortForward.pl: host and hostport are mandatory

2010-01-22  Dominique Dumont  <dominique.dumont@hp.com> v1.210

	* lib/Config/Model/OpenSsh.pm: Modified to read and write Port
	forward information from PortForward config class.

	* lib/Config/Model/models/Ssh/PortForward.pl: New configuration
	class to make ssh port forwarding configuration easier.

2010-01-18  Dominique Dumont  <dominique.dumont@hp.com> v1.209

	* lib/Config/Model/models/Sshd.pl: Added automatic migration of
	data from deprecated KeepAlive parameter to TCPKeepAlive
	parameter. This enables an automatic migration from old sshd
	config to new syntax.

	* lib/Config/Model/models/Ssh/HostElement.pl: Since ssh_config doc
	mentions that LocalForward and RemoteForward can be specified
	several times, these 2 parameters are changed from leaf to a list
	of leaf.

	* lib/Config/Model/models/Ssh.pl: As specifying Host block as list
	of patterns and content was not practical, the Host element in Ssh
	model was changed from list of HostBlock nodes to hash of
	HostElement. The Host patterns is used as the key of the
	hash. This enables a better view of shh configuration in the GUI.

	* lib/Config/Model/OpenSsh.pm (assign): Store value in uniline
	leaf even with embedded white spaces.
	(write_all_host_block): adapted to Host structure change in model

2009-09-10  Dominique Dumont  <dominique.dumont@hp.com> v1.208

	* lib/Config/Model/models/**.pl: Changed 'level' of some elements
	to 'important' so the new wizard provided by C::M::TkUI will show
	the most imporant ssh and sshd configuration parameters.

2009-07-29  Dominique Dumont  <dominique.dumont@hp.com> v1.207

	* t/ssh_config.t: When run as root, skip the tests that must be
	run as regular user. (Fix Debian FTBS)
