@@ -1,4 +1,5 @@
 	* *.t: fixed tests 
+	* demo: split user and maintainer demo FIXME: MANIFEST
 
 2010-02-02  Dominique Dumont  <dominique.dumont@hp.com>
 
